oxiplate-derive/tests/broken/derive/missing-attribute.rs
use oxiplate_derive::Oxiplate;

#[derive(Oxiplate)]
struct Data;

fn main() {}
